--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "npm": "1.3.x"
   },
   "scripts": {
-    "postinstall": "bower install",
+    "postinstall": "./node_modules/bower/bin/bower install",
     "prestart": "npm install",
     "start": "http-server -a localhost -p 8000 -c-1",
     "pretest": "npm install",
